--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px">
     </form>
 </div>
-<script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
+<script src='https://code.jquery.com/jquery-3.3.1.js'></script>
   <!-- Local javascript operations file -->
   <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
