fixed typo in button names

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <button class="btn btn-info animal" data-name="Dragon" style="margin: 5px;">Dragon</button>
 <button class="btn btn-info animal" data-name="Rancor" style="margin: 5px;">Rancor</button>
 <button class="btn btn-info animal" data-name="Kangaroo" style="margin: 5px;">Kangaroo</button>
-<button class="btn btn-info animal" data-name="Tribble" style="margin: 5px;">Tibble</button>
+<button class="btn btn-info animal" data-name="Tribble" style="margin: 5px;">Tribble</button>
 <button class="btn btn-info animal" data-name="Gremlin" style="margin: 5px;">Gremlin</button>
 <button class="btn btn-info animal" data-name="Hummingbird" style="margin: 5px;">Hummingbird</button>
 <button class="btn btn-info animal" data-name="Lizard" style="margin: 5px;">Lizard</button>
