by jove I think we;ve got it

--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <title>Gif Tastic</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 
-    
+
 
 </head>
 
 <body>
 
-<div class="container">
-<div id="animalsbuttons">
-<!-- Here be dragons -->
-<button class="btn btn-info animal" data-name="Zebra" style="margin: 5px;">Zebra</button>
-<button class="btn btn-info animal" data-name="Monkey" style="margin: 5px;">Monkey</button>
-<button class="btn btn-info animal" data-name="Lorax" style="margin: 5px;">Lorax</button>
-<button class="btn btn-info animal" data-name="Unicorn" style="margin: 5px;">Unicorn</button>
-<button class="btn btn-info animal" data-name="Otter" style="margin: 5px;">Otter</button>
-<button class="btn btn-info animal" data-name="Dolphin" style="margin: 5px;">Dolphin</button>
-<button class="btn btn-info animal" data-name="Puppies" style="margin: 5px;">Puppies</button>
-<button class="btn btn-info animal" data-name="Squirrel" style="margin: 5px;">Squirrel</button>
-<button class="btn btn-info animal" data-name="Dragon" style="margin: 5px;">Dragon</button>
-<button class="btn btn-info animal" data-name="Rancor" style="margin: 5px;">Rancor</button>
-<button class="btn btn-info animal" data-name="Kangaroo" style="margin: 5px;">Kangaroo</button>
-<button class="btn btn-info animal" data-name="Tribble" style="margin: 5px;">Tribble</button>
-<button class="btn btn-info animal" data-name="Gremlin" style="margin: 5px;">Gremlin</button>
-<button class="btn btn-info animal" data-name="Hummingbird" style="margin: 5px;">Hummingbird</button>
-<button class="btn btn-info animal" data-name="Lizard" style="margin: 5px;">Lizard</button>
-</div>
-</div>
-<!-- Where the gifs will show -->
-<div id="gifs" style="float:left"></div>
-<!-- Write in section -->
-<div style="float:right; margin-top:90px;">
- <h4>Add an Animal</h4>
-    <form id="gif-form">
-        <label for="gif-input"></label>
-        <input type="text" value="" id="gif-input"><br><br>
-        <!--Creates the submit button-->
-        <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px">
-    </form>
-</div>
-<script src='https://code.jquery.com/jquery-3.3.1.js'></script>
-  <!-- Local javascript operations file -->
-  <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <div class="container">
+        <div id="animalsbuttons">
+            <!-- Here be dragons -->
+            <button class="btn btn-info animal" data-name="Zebra" style="margin: 5px;">Zebra</button>
+            <button class="btn btn-info animal" data-name="Monkey" style="margin: 5px;">Monkey</button>
+            <button class="btn btn-info animal" data-name="Lorax" style="margin: 5px;">Lorax</button>
+            <button class="btn btn-info animal" data-name="Unicorn" style="margin: 5px;">Unicorn</button>
+            <button class="btn btn-info animal" data-name="Otter" style="margin: 5px;">Otter</button>
+            <button class="btn btn-info animal" data-name="Dolphin" style="margin: 5px;">Dolphin</button>
+            <button class="btn btn-info animal" data-name="Puppies" style="margin: 5px;">Puppies</button>
+            <button class="btn btn-info animal" data-name="Squirrel" style="margin: 5px;">Squirrel</button>
+            <button class="btn btn-info animal" data-name="Dragon" style="margin: 5px;">Dragon</button>
+            <button class="btn btn-info animal" data-name="Rancor" style="margin: 5px;">Rancor</button>
+            <button class="btn btn-info animal" data-name="Kangaroo" style="margin: 5px;">Kangaroo</button>
+            <button class="btn btn-info animal" data-name="Tribble" style="margin: 5px;">Tribble</button>
+            <button class="btn btn-info animal" data-name="Gremlin" style="margin: 5px;">Gremlin</button>
+            <button class="btn btn-info animal" data-name="Hummingbird" style="margin: 5px;">Hummingbird</button>
+            <button class="btn btn-info animal" data-name="Lizard" style="margin: 5px;">Lizard</button>
+        </div>
+    </div>
+    <!-- Where the gifs will show -->
+    <div id="gifs" style="float:left"></div>
+    <!-- Write in section -->
+    <div style="float:right; margin-top:90px;">
+        <h4>Add an Animal</h4>
+        <h5>Click on the image to start or stop the animation.</h5>
+        <form id="gif-form">
+            <label for="gif-input"></label>
+            <input type="text" value="" id="gif-input">
+            <br>
+            <br>
+            <!--Creates the submit button-->
+            <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px">
+        </form>
+    </div>
+    <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
+    <!-- Local javascript operations file -->
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
+
 </html>
