--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Gif Tastic</title>
 
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-
-
-
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
-
     <div class="container">
         <div id="animalsbuttons">
             <!-- Here be dragons -->
@@ -34,19 +35,19 @@
             <button class="btn btn-info animal" data-name="Lizard" style="margin: 5px;">Lizard</button>
         </div>
     </div>
-    <!-- Where the gifs will show -->
+    <!-- The gifs will show here -->
     <div id="gifs" style="float:left"></div>
-    <!-- Write in section -->
-    <div style="float:right; margin-top:90px;">
-        <h4>Add an Animal</h4>
-        <h5>Click on the image to start or stop the animation.</h5>
+    <!-- Add an Animal section -->
+    <div style="float:right; margin-top:90px; margin-right:10px">
+        <h4>Add your own animals</h4>
+        <h5>Click on the images to start or <br>stop the animation</h5>
         <form id="gif-form">
             <label for="gif-input"></label>
-            <input type="text" value="" id="gif-input">
+            <input type="text" value="" id="gif-input" placeholder="Add an Animal">
             <br>
             <br>
             <!--Creates the submit button-->
-            <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px">
+            <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px; margin-right:10px">
         </form>
     </div>
     <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
