--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="animalsbuttons">
+    <div class="container.fluid" style="margin-top:10px; margin-left:20px;">
+        <div id="animalsbuttons" class="row">
             <!-- Here be dragons -->
             <button class="btn btn-info animal" data-name="Zebra" style="margin: 5px;">Zebra</button>
             <button class="btn btn-info animal" data-name="Monkey" style="margin: 5px;">Monkey</button>
@@ -33,26 +33,35 @@
             <button class="btn btn-info animal" data-name="Gremlin" style="margin: 5px;">Gremlin</button>
             <button class="btn btn-info animal" data-name="Hummingbird" style="margin: 5px;">Hummingbird</button>
             <button class="btn btn-info animal" data-name="Lizard" style="margin: 5px;">Lizard</button>
+            <button class="btn btn-info animal" data-name="Animal muppet" style="margin: 5px;">Animal!</button>
         </div>
-    </div>
-    <!-- The gifs will show here -->
-    <div id="gifs" style="float:left"></div>
-    <!-- Add an Animal section -->
-    <div style="float:right; margin-top:90px; margin-right:10px">
-        <h4>Add your own animals</h4>
-        <h5>Click on the images to start or <br>stop the animation</h5>
-        <form id="gif-form">
-            <label for="gif-input"></label>
-            <input type="text" value="" id="gif-input" placeholder="Add an Animal">
-            <br>
-            <br>
-            <!--Creates the submit button-->
-            <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px; margin-right:10px">
-        </form>
+        <div class="row">
+            <!-- The gifs will show here -->
+            <!-- <div id="gifs" style="float:left"></div> -->
+            <div id="gifs" class="col-sm-10"></div>
+            <!-- Add an Animal section -->
+            <!-- <div style="float:right; margin-top:90px; margin-right:10px"> -->
+            <!-- <div class="col-md-2" style="margin-top:90px; margin-right:10px;"> -->
+            <div class="col-sm-2">
+                <h4>Add your own animals</h4>
+                <h5>Click on the images to start or
+                    <br>stop the animation</h5>
+                <form id="gif-form">
+                    <label for="gif-input"></label>
+                    <input type="text" value="" id="gif-input" placeholder="Add an Animal">
+                    <br>
+                    <br>
+                    <!--Creates the submit button-->
+                    <input type="submit" name="Button" class="btn btn-success" id="theButton" style="margin-left:8px;">
+                </form>
+            </div>
+        </div>
     </div>
     <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
     <!-- Local javascript operations file -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <!-- <p>© Copyright 2018 Shawn Perrin</p> -->
+    <!-- <p>© Copyright 2018 Shawn Perrin</p> -->
 </body>
 
 </html>
