looks better but I'm not pleased with how I had to do it. has to be another way

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container.fluid" style="margin-top:10px; margin-left:20px;">
+    <div class="container.fluid" style="margin-top:10px; margin-left:20px; margin-right:10px;">
         <div id="animalsbuttons" class="row">
             <!-- Here be dragons -->
             <button class="btn btn-info animal" data-name="Zebra" style="margin: 5px;">Zebra</button>
@@ -37,11 +37,8 @@
         </div>
         <div class="row">
             <!-- The gifs will show here -->
-            <!-- <div id="gifs" style="float:left"></div> -->
             <div id="gifs" class="col-sm-10"></div>
             <!-- Add an Animal section -->
-            <!-- <div style="float:right; margin-top:90px; margin-right:10px"> -->
-            <!-- <div class="col-md-2" style="margin-top:90px; margin-right:10px;"> -->
             <div class="col-sm-2">
                 <h4>Add your own animals</h4>
                 <h5>Click on the images to start or
@@ -57,11 +54,17 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+            <div class="container">
+              <span class="text-muted">© Copyright 2018 Shawn Perrin</span>
+            </div>
+    </footer>
+
     <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
     <!-- Local javascript operations file -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
-    <!-- <p>© Copyright 2018 Shawn Perrin</p> -->
-    <!-- <p>© Copyright 2018 Shawn Perrin</p> -->
+
 </body>
 
 </html>
